# oxidedb

./: .env  .env.example  .gitignore  COPILOT_INSTRUCTIONS.md  Cargo.toml  Dockerfile  LINUX_DEPLOYMENT.md  README.md  auth.db  build-linux.sh  build.rs  config.bat  docker-compose.yml  test_api.bat  test_api.ps1  test_api.sh  zcc.bat  zig-cc-wrapper.bat
.cargo/: config.toml
.github/workflows/: build-linux.yml  build.yml  dev.yml  release.yml
data/: AUTH  auth.db
data/demo/: testdb.db
proto/: oxidedb.proto
src/: auth.rs  cli.rs  config.rs  database.rs  error.rs  grpc.rs  handlers.rs  main.rs  models.rs
src/client/: openai.rs
src/managers/: database.rs
