[package]
name = "cortexdb"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = {version = "0.4.2", features = ["server"]}
rusqlite = { version = "0.37.0", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4"] }
bcrypt = "0.17.1"
jsonwebtoken = "9.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.16"
anyhow = "1.0"
dirs = "6.0.0"
