[package]
name = "oxidedb"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.23", features = [
    "json",
    "rustls-tls",
], default-features = false }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4"] }
bcrypt = "0.17.1"
jsonwebtoken = "9.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.16"
anyhow = "1.0"
dirs = "6.0.0"
rpassword = "7.0"
# gRPC dependencies
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"
prost-types = "0.13"

[build-dependencies]
tonic-build = "0.12"

[target.aarch64-apple-darwin]
linker = "zig"
rustflags = [
    "-C", "link-arg=cc",
    "-C", "link-arg=-target",
    "-C", "link-arg=aarch64-apple-darwin",
    "-C", "link-arg=--sysroot=C:/Users/debas/Documents/oxidedb/oxidedb/sdk",
]
